@@ -5,6 +5,8 @@
 3. When change zoom via keyboard show message (via skin).
 4. Ctrl+Shift+, opens settings page - consistent with other KDE apps.
 5. Esc closes settings page - consistent with MaterialSkin
+6. Allow sending commands to an instance by starting a second with play,
+   pause, playPause, prev, or next.
 
 0.0.1
 -----
